tests/fixtures/errors/e0403_signed_bits_mixing.mimz
// expect: E0403
module M {
  in a: bits[8]
  in b: bits[8]
  out y: bits[9]
  y = signed(a) + b
}
